--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url('../../../public/banner.jpg');
+    background-image: url('banner.jpg');
     background-size: cover;
     background-position: center;
     height: 80vh;
